# cppmacs

./: README.md  compile.sh  compile_commands.json  cppmacs  meson.build
src/backend/: Buffer.cpp  Buffer.h  BufferCursor.cpp  BufferCursor.h  BufferManager.cpp  BufferManager.h  CppMacs.cpp  Module.h  Rope.h
src/frontend/: Canvas.cpp  Canvas.h  Entry.cpp  Frame.cpp  Frame.h  FrameTree.cpp  FrameTree.h  InputManager.cpp  InputManager.h  Program.cpp  Program.h  Shaders.h  Window.cpp  Window.h
src/misc/: Logger.cpp  Logger.h  Tests.cpp  Tests.h  Util.cpp  Util.h
src/modules/: EditModule.cpp  EditModule.h
